--- a/ARPG_Demo/Assets/Editor/SkillEditor/Assets/Track/MultilineTrackStyle/MultilineTrackMenuItem.uxml
+++ b/ARPG_Demo/Assets/Editor/SkillEditor/Assets/Track/MultilineTrackStyle/MultilineTrackMenuItem.uxml
@@ -1,5 +1,5 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <ui:VisualElement name="MultilineTrackMenuItem" style="height: 30px; margin-bottom: 2px;">
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <ui:VisualElement name="MultilineTrackMenuItem" style="height: 30px; margin-bottom: 2px; position: absolute; width: 100%; background-color: rgba(56, 56, 56, 0); -unity-background-image-tint-color: rgb(255, 255, 255); border-left-color: rgba(0, 0, 0, 0); border-right-color: rgba(0, 0, 0, 0); border-top-color: rgba(0, 0, 0, 0); border-bottom-color: rgba(0, 0, 0, 0);">
         <ui:TextField picking-mode="Ignore" text="默认轨道" value="默认轨道" is-delayed="false" name="NameFiled" style="-unity-text-align: middle-left; margin-left: 10px; margin-bottom: 0; margin-top: 0; margin-right: 5px; height: 30px; white-space: nowrap; -unity-font-style: normal;" />
         <ui:Button text="X" display-tooltip-when-elided="true" name="DeleteButton" style="position: absolute; right: 12px; top: 7.5px; width: 15px; height: 15px; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; background-color: rgb(120, 0, 0);" />
     </ui:VisualElement>
